# kirra-runtime-sdk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  Dockerfile  ENGINEERING_REVIEW.md  ENVIRONMENT.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  deny.toml  docker-compose.yml  install.sh  rust-toolchain.toml
crates/kirra-actuation-consumer/: Cargo.toml
crates/kirra-actuation-consumer/src/: enrollment.rs  lib.rs
crates/kirra-actuation-consumer/tests/: mick_governed_loop.rs  spoken_governed_loop.rs  tier1_chokepoint.rs
crates/kirra-audit-hash/: Cargo.toml
crates/kirra-audit-hash/src/: lib.rs
crates/kirra-capture-schema/: Cargo.toml
crates/kirra-capture-schema/src/: lib.rs
crates/kirra-collector/: Cargo.toml  build.rs
crates/kirra-collector/src/: bag.rs  dataset.rs  join.rs  lib.rs  main.rs  manifest.rs  sample.rs
crates/kirra-collector/tests/: pipeline.rs
crates/kirra-consumer-ffi/: Cargo.toml
crates/kirra-consumer-ffi/src/: lib.rs
crates/kirra-contract-channel/: Cargo.toml
crates/kirra-contract-channel/src/: command.rs  crc.rs  lib.rs  reference.rs  seqlock.rs  validate.rs  view.rs
crates/kirra-contract-channel/tests/: end_to_end.rs
crates/kirra-core/: Cargo.toml
crates/kirra-core/src/: capture.rs  containment.rs  contract_consumer.rs  corridor.rs  deny_code_ext.rs  frame_integrity.rs  governor_guard.rs  kinematics_contract.rs  kinematics_sim.rs  lib.rs  perception_monitor.rs  platform_kinematics.rs  posture_tracker.rs  trajectory.rs
crates/kirra-core/tests/: containment_proptest.rs
crates/kirra-doer-eval/: Cargo.toml
crates/kirra-doer-eval/examples/: export_artifacts.rs  scorecard.rs
crates/kirra-doer-eval/src/: lib.rs  onnx.rs
crates/kirra-doer-eval/tests/: artifact_drift.rs  onnx_roundtrip.rs  v2_artifact_gate.rs  v2_planner_dropin.rs
crates/kirra-fabric-types/: Cargo.toml
crates/kirra-fabric-types/src/: asset.rs  lib.rs
crates/kirra-fleet-transport/: Cargo.toml  README.md
crates/kirra-fleet-transport/src/: ingress_limit.rs  lib.rs  transport.rs
crates/kirra-fleet-types/: Cargo.toml
crates/kirra-fleet-types/src/: federation.rs  federation_reconciliation.rs  lib.rs  store.rs
crates/kirra-governor-service/: Cargo.toml  README.md
crates/kirra-governor-service/src/: main.rs
crates/kirra-hv-carrier/: Cargo.toml  README.md
crates/kirra-hv-carrier/src/: lib.rs  realtime.rs
crates/kirra-hv-carrier/tests/: governor_two_process.rs  two_process.rs
crates/kirra-industrial/: Cargo.toml
crates/kirra-industrial/src/: lib.rs  protocol_adapter.rs
crates/kirra-inline-governor/: Cargo.toml  README.md
crates/kirra-inline-governor/src/: lib.rs
crates/kirra-inline-governor/tests/: cross_process.rs
crates/kirra-kpi-gate/: Cargo.toml
crates/kirra-kpi-gate/src/: closedloop.rs  confidence.rs  differential.rs  lib.rs  montecarlo.rs  sotif_coverage.rs
crates/kirra-l3-e2e/: Cargo.toml
crates/kirra-l3-e2e/results/: qnx800-x86_64-vm-kvm.txt
crates/kirra-l3-e2e/src/: main.rs
crates/kirra-loom-models/: Cargo.toml
crates/kirra-loom-models/src/: lib.rs
crates/kirra-map/: Cargo.toml
crates/kirra-map/src/: lane_lines.rs  lanelet2.rs  lanemap.rs  lib.rs
crates/kirra-mick/: Cargo.toml
crates/kirra-mick/examples/: drive_session.rs  mick_chauffeur.rs  mick_eval.rs  mick_intersection.rs  mick_sidewalk_brain.rs  planner_service.rs  sidewalk_capture.rs  sidewalk_session.rs  taj_occy_kirra_stack.rs  taj_service.rs
crates/kirra-mick/src/: lib.rs
crates/kirra-mick/tests/: scenario_suite.rs
crates/kirra-ota-campaign/: Cargo.toml
crates/kirra-ota-campaign/src/: lib.rs
crates/kirra-ota-installer/: Cargo.toml
crates/kirra-ota-installer/deploy/: kirra-governor.service  kirra-ota-probe.service  kirra-ota-pull.service  kirra-ota-pull.timer  kirra-ota.env.example
crates/kirra-ota-installer/src/: lib.rs  model_allowlist.rs  nvbootctrl.rs  uptane_trust.rs
crates/kirra-persistence/: Cargo.toml
crates/kirra-persistence/src/: audit.rs  audit_appender.rs  av_subsystem.rs  cert_principals.rs  epoch.rs  fabric.rs  federation.rs  fleet_trust_store.rs  key_registry.rs  lib.rs  migrations.rs  nodes.rs  operators.rs  ota_campaigns.rs  posture.rs  principals.rs  schema_spec.rs  tests.rs
crates/kirra-persistence/tests/: live_pg.rs  shared_gap.rs
crates/kirra-planner/: Cargo.toml
crates/kirra-planner/examples/: doer_bound_fixture.rs  train_v2.rs
crates/kirra-planner/src/: behavior.rs  fast_loop.rs  geometric.rs  lanelet2.rs  lanemap.rs  learned.rs  learned_v2.rs  lib.rs  mick.rs  mick_capture.rs  mick_llm.rs
crates/kirra-planner/tests/: adversarial_doer_bounded_by_kirra.rs  dynamic_obstacle_mid_turn.rs  full_stack_capstone.rs  intersection_closed_loop.rs  lane_graph_to_occy.rs  learned_doer_bounded_by_kirra.rs  learned_doer_invariance_capstone.rs  learned_maneuver_bounded_by_kirra.rs  mick_adversarial_prompt.rs  mick_closed_loop.rs  mick_turn_at.rs  multi_junction_route.rs  occluded_junction.rs  overtake_oncoming.rs  permitted_protected_turn.rs  pull_over.rs  speed_envelope_proptest.rs  taj_occy_kirra_stack.rs  turn_at_junction.rs  turn_gap_acceptance.rs  turn_multilane.rs  unmarked_road_keep_right.rs  v2_artifact_gate.rs
crates/kirra-policy-types/: Cargo.toml
crates/kirra-policy-types/src/: action_claim.rs  cmd_vel.rs  lib.rs
crates/kirra-proposal-bench/: Cargo.toml
crates/kirra-proposal-bench/src/: main.rs
crates/kirra-release-token/: Cargo.toml
crates/kirra-release-token/src/: lib.rs  model_targets.rs  provisioning.rs  ros_twist.rs  uptane.rs
crates/kirra-release-token/tests/: governor_release_flow.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: decode_verdict.rs  dnp3_analog_setpoint.rs  llm_json_intent.rs  scalar_decode_le.rs
parko/: BUILD_TUNING.md  Cargo.toml  DOER_MODEL_SCALEUP.md  INTEGRATION.md  MODEL_INTEGRITY.md  QNX_BACKEND_SELECTION.md  QUANTIZATION_DESIGN.md  QUANTIZATION_Q1_SCOPE.md  README.md
parko/crates/parko-aegis/: Cargo.toml
parko/crates/parko-core/: Cargo.toml
parko/crates/parko-kirra/: Cargo.toml  (+1 more)
(+1078 files in other folders)
