# --- Workspace ----------------------------------------------------------------
#
# Top-level workspace (S131 Phase 1, #131). Members:
#   - "."                          — the root `kirra-runtime-sdk` crate (lib +
#                                     bins, this manifest).
#   - "crates/kirra-ros2-adapter"  — the ROS 2 adapter (Phase 1 skeleton; the
#                                     entry point for Option-B per-trajectory
#                                     wiring). ROS deps gated behind `ros2`
#                                     feature; default build does not pull them.
#
# `parko/` is intentionally NOT included — it is a self-contained sub-workspace
# with its own resolver and is consumed by this crate via a `path =` dependency.
# That separation keeps the ML inference pipeline (parko-core / parko-onnx /
# parko-kirra) independent of the safety-kernel build.
[workspace]
members = [".", "crates/kirra-ros2-adapter"]
resolver = "2"

[package]
name = "kirra-runtime-sdk"
version = "1.1.2"
edition = "2021"
description = "Vendor-neutral runtime safety kernel for autonomous vehicles, robots, and drones"
repository = "https://github.com/justinlooney/kirra-runtime-sdk"
homepage = "https://kirrasystems.com"
authors = ["Justin Looney <justin@kirrasystems.io>"]
keywords = ["safety", "autonomous", "robotics", "automotive", "runtime"]
categories = ["embedded", "safety-critical"]

[lib]
name = "kirra_runtime_sdk"
crate-type = ["rlib", "cdylib"]

# Release builds use `panic = "abort"` so an unrecoverable panic on the
# Governor check path terminates the process deterministically rather than
# unwinding through safety code. Process death is fail-closed by construction:
# the planner cannot get an Accept verdict with no Governor running (no HTTP
# response), DDS actuator topics use Volatile durability (no stale-command
# replay to reconnecting subscribers), and HA standby detects via heartbeat
# absence within `PROMOTION_TIMEOUT_MS`. Dev/test profile is intentionally left
# on unwind so `#[should_panic]` tests keep working. Tied to S3 / #115.
[profile.release]
panic = "abort"

[features]
ros2 = []
tpm = ["dep:tss-esapi"]

[dependencies]
parko-core = { path = "parko/crates/parko-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tss-esapi = { version = "7", optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
rand = "0.8"
proptest = "1"
parko-kirra = { path = "parko/crates/parko-kirra" }
# `test-util` enables `#[tokio::test(start_paused = true)]` + `tokio::time::advance`
# for deterministic time-driven tests (telemetry_watchdog DI seam, S3 / #115).
# Test-only feature stacked onto the production tokio dependency above; release
# builds do not link the test-util harness.
tokio = { version = "1", features = ["full", "test-util"] }

[[bin]]
name = "ai_robot_demo"
path = "src/bin/ai_robot_demo.rs"

[[bin]]
name = "ai_robot_sim_diagnostic"
path = "src/bin/ai_robot_sim_diagnostic.rs"

[[bin]]
name = "kirra_ros2_demo_node"
path = "src/bin/kirra_ros2_demo_node.rs"

[[bin]]
name = "kirra_verifier_service"
path = "src/bin/kirra_verifier_service.rs"

[[bin]]
name = "kirra_carla_client"
path = "src/bin/kirra_carla_client.rs"
