# --- Workspace ----------------------------------------------------------------
#
# Top-level workspace (S131 Phase 1, #131). Members:
#   - "."                          — the root `kirra-verifier` crate (lib +
#                                     bins, this manifest).
#   - "crates/kirra-ros2-adapter"  — the ROS 2 adapter (Phase 1 skeleton; the
#                                     entry point for Option-B per-trajectory
#                                     wiring). ROS deps gated behind `ros2`
#                                     feature; default build does not pull them.
#
# `parko/` is intentionally NOT included — it is a self-contained sub-workspace
# with its own resolver and is consumed by this crate via a `path =` dependency.
# That separation keeps the ML inference pipeline (parko-core / parko-onnx /
# parko-kirra) independent of the safety-kernel build.
[workspace]
members = [".", "crates/kirra-core", "crates/kirra-contract-channel", "crates/kirra-hv-carrier", "crates/kirra-release-token", "crates/kirra-timing", "crates/kirra-wcet-bench", "crates/kirra-trajectory", "crates/kirra-fleet-types", "crates/kirra-ros2-adapter", "crates/kirra-capture-schema", "crates/kirra-collector", "crates/kirra-governor-service", "crates/kirra-wire-client", "crates/kirra-proposal-bench", "crates/kirra-planner", "crates/kirra-mick", "crates/kirra-map", "crates/kirra-taj", "crates/kirra-fleet-transport", "crates/kirra-doer-eval"]
resolver = "2"

[package]
name = "kirra-verifier"
version = "1.1.2"
edition = "2021"
description = "Vendor-neutral runtime safety kernel for autonomous vehicles, robots, and drones"
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
homepage = "https://kirrasystems.com"
authors = ["Kirra Systems, LLC <justin.looney@kirrasystems.com>"]
keywords = ["safety", "autonomous", "robotics", "automotive", "runtime"]
categories = ["embedded", "safety-critical"]
license-file = "COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[lib]
name = "kirra_verifier"
crate-type = ["rlib", "cdylib"]

# Release builds use `panic = "abort"` so an unrecoverable panic on the
# Governor check path terminates the process deterministically rather than
# unwinding through safety code. Process death is fail-closed by construction:
# the planner cannot get an Accept verdict with no Governor running (no HTTP
# response), DDS actuator topics use Volatile durability (no stale-command
# replay to reconnecting subscribers), and HA standby detects via heartbeat
# absence within `PROMOTION_TIMEOUT_MS`. Dev/test profile is intentionally left
# on unwind so `#[should_panic]` tests keep working. Tied to S3 / #115.
[profile.release]
panic = "abort"

# Production-artifact profile for the control-plane binaries. SOURCE-IDENTICAL to
# `release` (inherits it, so `panic = "abort"` and the fail-closed rationale above
# still hold) — it only turns UP codegen quality: thin LTO + a single codegen unit
# + symbol strip. These are portable, chipset-AGNOSTIC wins; they do not fragment
# source and do not reduce portability. Per-chipset `target-cpu` and PGO are opt-in
# at the build invocation (see docs/PERFORMANCE_BUILD_TUNING.md), never a committed
# global default. NOTE: this profile is for the HOST/edge Linux service build only.
# The QNX safety-checker (`tools/qnx-rtm-harness/run_qnx_fdit.sh`) builds the judge
# with its OWN fixed flags (`-C opt-level=2 -C panic=abort`, no LTO/PGO/target-cpu)
# so the WCET evidence stays deterministic and reproducible — do not route the cert
# build through this profile.
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = true

[features]
ros2 = []
tpm = ["dep:tss-esapi"]
# D1 (item 19): the real CycloneDDS actuator writer (`src/dds_cyclonedds.rs`).
# Links the native CycloneDDS `libddsc` — built ONLY on an integrator host that
# ships CycloneDDS (e.g. ROS 2 Jazzy), never in the default CI/build container.
# Pulls NO Rust dependency; the QoS mapping + read-back validation it relies on
# are pure functions in `dds_bridge.rs`, exercised by the default test suite.
cyclonedds = []

[dependencies]
# Lean safety/contract foundation (de-monolith Stage 1): FleetPosture / NodeTrustState
# live here; this crate re-exports them so existing paths are unchanged. The `capture`
# feature pulls the relocated perception_monitor/kinematics_sim/capture modules' writer
# deps (de-monolith Stage 7) so `crate::capture` / `crate::kinematics_sim` /
# `crate::gateway::perception_monitor` keep resolving as thin re-export shims.
kirra-core = { path = "crates/kirra-core", features = ["capture"] }
# R2: the lean fleet-lane trust/wire types (federation v1/v2 + verification +
# the FleetTrustStore seam). The verifier re-exports `federation` /
# `federation_reconciliation` from here and implements `FleetTrustStore` for
# `VerifierStore` (src/fleet_trust_store.rs).
kirra-fleet-types = { path = "crates/kirra-fleet-types" }
# Clause 2 cross-partition boundary contract (ADR-0006 / HVCHAN-001): the frozen
# GovernorContractView + odd/even seqlock. no_std, zero-dep; the release-token
# binding (src/governor_release.rs) reuses THIS crate's canonical image plus the
# verifier's EXISTING Ed25519/SHA-256 machinery (no new crypto).
kirra-contract-channel = { path = "crates/kirra-contract-channel" }
# The single canonical governor→actuator release-token format (HVCHAN §3.5-7).
# `src/governor_release.rs` re-exports it (adding only the root-local key-id
# helper) so there is one digest/sign/verify implementation, not two.
kirra-release-token = { path = "crates/kirra-release-token" }
parko-core = { path = "parko/crates/parko-core" }
# Governor-free wire schema for capture records, shared verbatim with the offline
# collector (docs/COLLECTOR_DESIGN.md [C1]). Re-exported by `crate::capture`.
kirra-capture-schema = { path = "crates/kirra-capture-schema" }
# `rc`: enables serde's Serialize impls for `Arc`/`Rc`. Needed because
# `FleetNodePosture` interns its node ids as `Arc<str>` (review P5) and is
# serialized into HTTP/SSE responses. We never DESERIALIZE an `Arc`/`Rc`
# (the feature's only sharp edge — deserialization doesn't preserve shared
# identity), so enabling it is benign here.
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
dashmap = "6"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tss-esapi = { version = "7", optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
# OS CSPRNG primitive for attestation challenge nonces (#147). Already in the
# tree transitively via ed25519-dalek's rand_core; declared directly so the
# library can source unpredictable nonces (no weak/time-based RNG).
getrandom = "0.3"
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
rand = "0.8"
proptest = "1"
# File-backed temp DBs for tamper-detection tests: a SQLite :memory: database is
# per-connection, so tampering a row written by one connection from a second
# connection (the audit-chain tamper scenario, SG-010) requires an on-disk file.
tempfile = "3"
# R5: the demo-seed test exercises parko-kirra's `VerifierStore`-backed clearance
# delivery, so it needs the opt-in `verifier-sink` feature.
parko-kirra = { path = "parko/crates/parko-kirra", features = ["verifier-sink"] }
# `test-util` enables `#[tokio::test(start_paused = true)]` + `tokio::time::advance`
# for deterministic time-driven tests (telemetry_watchdog DI seam, S3 / #115).
# Test-only feature stacked onto the production tokio dependency above; release
# builds do not link the test-util harness.
tokio = { version = "1", features = ["full", "test-util"] }

[[bin]]
name = "ai_robot_demo"
path = "src/bin/ai_robot_demo.rs"

[[bin]]
name = "ai_robot_sim_diagnostic"
path = "src/bin/ai_robot_sim_diagnostic.rs"

[[bin]]
name = "kirra_ros2_demo_node"
path = "src/bin/kirra_ros2_demo_node.rs"

[[bin]]
name = "kirra_verifier_service"
path = "src/bin/kirra_verifier_service.rs"

[[bin]]
name = "kirra_carla_client"
path = "src/bin/kirra_carla_client.rs"

# Dev-only operator-console demo seed (NOT a production-service mode). See
# docs/CONSOLE_RUNBOOK.md. Writes a KIRRA-DEMO-* fleet through the real signed
# store APIs; refuses any non-empty store; requires KIRRA_LOG_SIGNING_KEY.
[[bin]]
name = "kirra_console_demo_seed"
path = "src/bin/kirra_console_demo_seed.rs"
