# ADR-0033 — the verifying motor-consumer core (Tier-1, hardware-mocked).
#
# The DEPLOYMENT shape this crate is the core of: a dedicated consumer process
# is the SOLE owner of the Rosmaster serial device; every command must pass the
# verify-before-release gate (kirra-release-token::ros_twist::RosReleaseGate)
# before a single byte reaches the port. This crate holds everything that does
# NOT need the physical robot: the release gate consumption, the fail-closed
# liveness supervisor (SS-002: starve → active commanded stop → silence, never
# hold-last-command), and the serial SEAM (`MotorSerial`, the NvbootctrlRunner
# command-seam precedent) behind which the real Rosmaster protocol will land
# when hardware access exists. Per ADR-0033's ordering constraint, on the real
# R2 THIS consumer is the motor bringup — no vendor /cmd_vel driver ships first.
#
# The Tier-1 regression guard (tests/tier1_chokepoint.rs) is the evidence
# artifact: cross-process, no ROS, CI-blocking (workspace member → the Test lane
# runs it on every PR).
[package]
name = "kirra-actuation-consumer"
version = "0.1.0"
publish = false
edition = "2021"

# MSRV floor inherited from the workspace root ([workspace.package]) — one
# source of truth per workspace, so `cargo <cmd> -p <member>` on an old
# toolchain fails the rust-version check up front, never mid-compile (#797 F3).
rust-version.workspace = true
[dependencies]
kirra-release-token = { path = "../kirra-release-token" }
ed25519-dalek = "2"

[dev-dependencies]
hex = "0.4"
# The governed-loop demo drill (tests/mick_governed_loop.rs) drives the REAL
# doer side — Mick's fail-closed intent parse, plan_for_intent grounding, and
# the #893-narrated slow-loop checker — against this crate's chokepoint.
# Dev-only: these never enter the shipped consumer, and the doer crates are
# themselves fenced FROM actuation (ci/check_mick_actuation_fence.py); here
# the dependency points the safe direction (the actuation crate's TEST HARNESS
# consumes the doer, never the reverse).
kirra-core = { path = "../kirra-core" }
kirra-planner = { path = "../kirra-planner" }
kirra-trajectory = { path = "../kirra-trajectory" }
# The SPOKEN loop drill (tests/spoken_governed_loop.rs): the speech shell's
# seams (WAV gate, STT/TTS traits, narration renderer) wrapped around the same
# chokepoint. Same safe direction as above — kirra-sidecars is itself fenced.
kirra-sidecars = { path = "../kirra-sidecars" }
serde_json = "1"
