[package]
name = "kirra-capture-schema"
version = "0.1.0"
edition = "2021"
# MSRV floor inherited from the workspace root ([workspace.package]) — one
# source of truth per workspace, so `cargo <cmd> -p <member>` on an old
# toolchain fails the rust-version check up front, never mid-compile (#797 F3).
rust-version.workspace = true
description = "Wire schema for Kirra's learning-loop capture records — the single authoritative, governor-free type set shared by the SDK emitters and the offline collector."
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
authors = ["Kirra Systems, LLC <justin.looney@kirrasystems.com>"]
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

# §0 SAFETY BOUNDARY: this crate depends on `serde` ONLY. It carries no governor
# types and no logic — just the leaf record shapes. The offline collector depends
# on THIS crate (never on `kirra-verifier`), which is what mechanically
# guarantees the collector cannot link or reach the verdict path.
[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
