[package]
name = "kirra-collector"
version = "0.1.0"
edition = "2021"
description = "Offline learning-loop collector: joins Kirra capture JSONL to a bus recording and writes a training-ready Parquet dataset. Depends on kirra-capture-schema ONLY — never the governor (docs/COLLECTOR_DESIGN.md §0)."
repository = "https://github.com/justinlooney/kirra-runtime-sdk"
authors = ["Justin Looney <justin@kirrasystems.io>"]
license = "MIT OR Apache-2.0"

[dependencies]
kirra-capture-schema = { path = "../kirra-capture-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "58"
parquet = "58"
sha2 = "0.10"

[[bin]]
name = "kirra-collector"
path = "src/main.rs"
