[package]
name = "kirra-collector"
version = "0.1.0"
edition = "2021"
description = "Offline learning-loop collector: joins Kirra capture JSONL to a bus recording and writes a training-ready Parquet dataset. Depends on kirra-capture-schema ONLY — never the governor (docs/COLLECTOR_DESIGN.md §0)."
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
authors = ["Kirra Systems, LLC <justin.looney@kirrasystems.com>"]
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[dependencies]
kirra-capture-schema = { path = "../kirra-capture-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "58"
parquet = "58"
sha2 = "0.10"
# [C2] real rosbag2 db3 backend (Db3BagReader). bundled = vendored SQLite (no system dep).
rusqlite = { version = "0.31", features = ["bundled"] }
# [C2] real rosbag2 MCAP backend (McapBagReader). default features bring lz4+zstd
# so real (compressed) bags read; the reader code is identical either way.
mcap = "0.9"

[[bin]]
name = "kirra-collector"
path = "src/main.rs"
